--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -13,14 +13,12 @@
 <script src="https://cdn.plot.ly/plotly-latest.min.js"></script> <!-- Adicionado -->
 </head>
 <body>
-  <div class="background">
-    <img src="{{ url_for('static', filename='img/home_bg.png') }}" alt="">
-  </div>
   <div class="content">
     <div class="sidebar">
       <div class="top">
         <div class="logo">
-          <img src="{{ url_for('static', filename='img/logo.png') }}" alt="Logo">
+          <img src="{{ url_for('static', filename='img/logo-2.svg') }}" alt="Logo">
+          <a>POUPAPP</a>
         </div>
         <ul class="menu">
           <li class="listaMenu"><a href="#"><span>INÍCIO</span></a></li>
