--- a/static/css/home.css
+++ b/static/css/home.css
@@ -1,18 +1,32 @@
+@font-face {
+  font-family: Poppins-Medium;
+  src: url(/static/fontes/Poppins-Medium.ttf);
+}
+@font-face {
+  font-family: Days-Sans;
+  src: url(/static/fontes/Days\ Sans\ Black.otf);
+}
+@font-face {
+  font-family: Poppins-Bold;
+  src: url(/static/fontes/Poppins-Bold.ttf);
+}
+
 body {
   margin: 0;
   padding: 0;
-  background-color: #000000;
+  background-color: #031227;
   display: flex;
   justify-content: center;
   align-items: center;
   min-height: 100vh;
   overflow: hidden;
-  font-family: 'Roboto';
+  font-family: Poppins-Medium;
 }
+
 
 .content,
 .sidebar {
-  font-family: 'Satoshi', sans-serif;
+  font-family: Poppins-Medium;
 }
 
 .background {
@@ -48,22 +62,37 @@ body {
   padding-top: 30px;
   min-width: 200px;
 }
+.top {
+  justify-content: center;
+  align-items: center;
+}
 
 .sidebar .top,
 .sidebar .bottom {
   padding: 20px;
 }
 
-.sidebar .logo {
-  display: flex;
+.sidebar {
+  justify-content: center;
   align-items: center;
   padding-bottom: 20px;
 }
 
-.sidebar .logo img {
-  width: 48px;
-  height: 48px;
-  margin-right: 10px;
+.logo a{
+  align-items: center;
+  justify-content: center;
+  font-family: Poppins-Bold;
+  font-size: larger;
+  margin-left: 32%;
+}
+
+.logo img {
+  margin-top: -20px;
+  margin-left: 25%;
+  justify-content: center;
+  align-items: center;
+  width: 50%;
+  height: auto;
 }
 
 .sidebar .menu {
@@ -72,7 +101,7 @@ body {
 }
 
 .sidebar .menu li {
-  padding: 10px 0;
+  padding: 15px 0;
 }
 
 .sidebar .menu li a {
@@ -83,31 +112,37 @@ body {
   cursor: pointer;
 }
 
+
 .sidebar .menu .submenu {
   max-height: 0;
   overflow: hidden;
   list-style: none;
-  border-radius: 5%;
+  border-radius: 10px;
   transition: max-height 0.3s ease-out;
   color: white;
   font-size: 14px;
   text-align: center;
   padding-left: 10px;
-  background-color: rgba(228, 228, 228, 0.5);
+  background-color: #031227;
 }
 
 .submenu {
+  position: absolute;
+  z-index: 2;
   margin-top: 10px;
+  width: 80%;
 }
 
 .listaMenu span {
+  margin-top: 10px;
+  box-shadow: 2px 2px  #6C8C4B;
   font-size: 14px;
   display: flex;
   align-items: center;
-  justify-content: space-between;
+  justify-content: center;
   padding: 10px;
   border-radius: 5px;
-  background: linear-gradient(100deg, #51b967 0%, #0f572e 100%);
+  background-color: #9CDA5F;
   border: none; 
   color: rgb(255, 255, 255);
   width: 95%;
@@ -115,7 +150,7 @@ body {
 }
 
 .sidebar .menu .submenu li a {
-  color: rgb(63, 63, 63);
+  color: rgb(255, 255, 255);
   font-size: 12px;
   text-align: center;
   padding: 5px;
@@ -130,6 +165,7 @@ body {
 }
 
 .sidebar .schedule a{
+  position: relative;
   text-decoration: none;
   font-size: 14px;
   display: flex;
@@ -139,9 +175,9 @@ body {
   border-radius: 5px;
   background-color: white;
   border: solid;
-  border-color: #0f572e;
+  border-color: #9CDA5F;
   border-width:2px;
-  color: #0f572e;
+  color: #9CDA5F;
   width: 95%;
   font-weight: bold;
 }
@@ -220,7 +256,7 @@ body {
   display: flex;
   border-radius: 10px;
   background-color: white;
-  box-shadow: 4px 0 8px rgba(0, 0, 0, 0.178);
+  box-shadow: 1px 1px 3px #0000005b;
 }
 
 .articleitem1 {
@@ -257,7 +293,7 @@ body {
 
 .portfolio {
   background-color: rgb(255, 255, 255);
-  box-shadow: 1px 4px 10px 8px rgba(0, 0, 0, 0.178);
+  box-shadow: 1px 1px 5px 1px #0000005b;
   flex-grow: 1;
   padding: 2% 5% 0% 5%;
   border-radius: 10px;
@@ -326,7 +362,7 @@ body {
 .squares {
   flex: 1;
   background-color: #ffffff;
-  box-shadow: 1px 4px 10px 8px rgba(0, 0, 0, 0.178);
+  box-shadow: 1px 1px 5px 1px #0000005b;
   border-radius: 10px;
   text-align: center;
   padding: 10px;
@@ -431,14 +467,14 @@ body {
 }
 
 .spend-box {
-  width: 100%;
-  height: 80vh;
+  width: 50%;
+  height: auto;
   background-color: #ffffff;
   border-radius: 10px;
   box-shadow: 1px 4px 10px 8px rgba(0, 0, 0, 0.178);
   align-items: center;
-  display: flex;
   justify-content: center;
+  display: flex;
 }
 
 .spend-header label{
@@ -451,8 +487,9 @@ body {
 }
 
 .spend-cat {
-  background: linear-gradient(100deg, #51b967 0%, #0f572e 100%);
+  background-color: #9CDA5F;
   border: none;
+  box-shadow: 3px 3px  #6C8C4B;
   padding: 0.8rem 1rem;
   border-radius: 5px;
   cursor: pointer;
@@ -461,18 +498,27 @@ body {
   font-size: large;
 }
 
+.spend-header select option{
+  margin-top: 90px ;
+  background-color: #031227;
+}
+.spend-header select option a:hover{
+  background-color: #6C8C4B;
+}
+
 
 .spend-input input{
   padding: 0.5rem 1.2rem;
   margin: 0.2rem 0;
-  border: 1px solid #666666;
+  border: none;
+  box-shadow: 1px 1px 3px #0000005b;
   border-radius: 5px;
   background-color: #F5F3EF;
   min-width: 300px;
 }
 
 .spend-input input:focus-visible{
-  outline: 1px solid #18c764;
+  outline: 1px solid #9CDA5F;
 }
 
 .spend-input label{
@@ -483,4 +529,29 @@ body {
 
 .spend-input {
   margin-top: 0.2%;
+}
+.articles-register {
+  display: flex;
+}
+.ilustra {
+  width: 50%;
+  max-width: 512px;
+  height: auto;
+  justify-content: center;
+  justify-items: center;
+  display: flex;
+  margin-right:6%;
+  margin-left: 3%;
+}
+  
+.ilustra img {
+  max-width: 100%;
+  min-width: 400px;
+}
+.floating {
+  animation: float 3s ease-in-out infinite;
+}
+  
+.floating-itens {
+  animation: float-itens 5s ease-in-out infinite;
 }
