--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -315,6 +315,26 @@ animation: float-itens 5s ease-in-out infinite;
   color: #fff;
 }
 
+.login-button button:hover{
+  background-color: #6C8C4B;
+  transition: background-color 0.4s ease;
+}
+
+.register-button:hover{
+  background-color: #6C8C4B;
+  transition: background-color 0.4s ease;
+}
+
+.button-register button:hover{
+  background-color: #6C8C4B;
+  transition: background-color 0.4s ease;
+}
+
+.login-form button:hover{
+  background-color: #6C8C4B;
+  transition: background-color 0.4s ease;
+}
+
 .input-group {
   margin-top: 10%;
   display: flex;
