--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -36,10 +36,7 @@
           </li>
           <li class="listaMenu"><a href="#"><span>RECEITAS</span></a>
             <ul class="submenu">
-              <li><a href="#">GANHOS</a></li>
-              <li><a href="#">REEMBOLSOS</a></li>
-              <li><a href="#">ECONOMIAS</a></li>
-              <li><a href="#">PAGAMENTOS</a></li>
+              <li><a href="#">CADASTRAR</a></li>
             </ul>
           </li>
           <li class="listaMenu"><a href="#"><span>USUÁRIO</span></a>
