atualização dos gráficos

--- a/static/css/home.css
+++ b/static/css/home.css
@@ -283,6 +283,11 @@ body {
   max-width: 300px;
 }
 
+.donutChart{
+  display: flex;
+  align-items: center;
+  justify-self: center;
+}
 
 
 .item2cont {
@@ -361,17 +366,22 @@ body {
 
 .squares {
   flex: 1;
-  background-color: #ffffff;
+  background-color: rgb(255, 255, 255);
   box-shadow: 1px 1px 5px 1px #0000005b;
   border-radius: 10px;
   text-align: center;
+  text-decoration: none;
   padding: 10px;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  transition: transform 0.3s ease;
 }
 
+.squares:hover {
+  transform: scale(1.1);
+}
 .squares p {
   margin-top: 0;
   font-size: 1.1em;
