--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -89,28 +89,28 @@
             </div>
           </div>
           <div class="details">
-            <div class="squares">
-              <p>VAL3</p>
+            <a href="pagina-de-destino1.html" class="squares">
+              <p>Gastos</p>
               <h2>$150.00<br><span class="up">↑ 5%</span></h2>
-            </div>
-            <div class="squares">
+            </a>
+            <a href="pagina-de-destino2.html" class="squares">
               <p>PETR4</p>
               <h2>$200.00<br><span class="down">↓ 3%</span></h2>
-            </div>
-            <div class="squares">
+            </a>
+            <a href="pagina-de-destino3.html" class="squares">
               <p>BBAS3</p>
               <h2>$350.00<br><span class="up">↑ 8%</span></h2>
-            </div>
-            <div class="squares">
+            </a>
+            <a href="pagina-de-destino4.html" class="squares">
               <p>PRIO3</p>
               <h2>$120.00<br><span class="down">↓ 2%</span></h2>
-            </div>
+            </a>
           </div>
           <div id="chart" style="height: 370px; width: 100%;"></div>
         </div>
         <div class="articleitem2">
           <div class="item2cont">
-            <div class="velocimetro" id="velocimetro"></div>
+            <div id="donutChart" style="margin-top: 50px; height: 280px; width: 100%;"></div>
             <div class="w3-container">
               <p>VAL3</p>
               <div class="w3-light-grey w3-round-xlarge">
