--- a/templates/cadastrar_gastos.html
+++ b/templates/cadastrar_gastos.html
@@ -29,7 +29,7 @@
               <li><a href="#">MESES ANTERIORES</a></li>
             </ul>
           </li>
-          <li class="listaMenu"><a href="#"><span>GASTOS</span></a></li>
+          <li class="SelMenu"><a href="#"><span>GASTOS</span></a></li>
           <li class="listaMenu"><a href="#"><span>GANHOS</span></a>
             <ul class="submenu">
               <li><a href="#">CADASTRAR</a></li>
