--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -21,7 +21,7 @@
           <a>POUPAPP</a>
         </div>
         <ul class="menu">
-          <li class="listaMenu"><a href="#"><span>INÍCIO</span></a></li>
+          <li class="SelMenu"><a href="#"><span>INÍCIO</span></a></li>
           <li class="listaMenu">
             <a href="#"><span>ANÁLISES</span></a>
             <ul class="submenu">
